# PyLLaMa-CPU

./: LICENSE  README.md  build.sh  example.py  quantize.py
llama_cpp_dir/: CMakeLists.txt  bridge.cpp  quantize
